<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true"
    tools:context="com.example.skrij.gravytruck.SignUpActivity">

    <TextView
        android:id="@+id/app_title_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_name_margin"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@android:color/black"
        android:textSize="@dimen/title_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="@dimen/image_sign_in_up_width"
        android:layout_height="@dimen/image_sign_in_up_height"
        android:contentDescription="@string/foodtruck_image_home"
        android:src="@drawable/truck_hot_dog"
        app:layout_constraintBottom_toTopOf="@+id/singup_edittext_username"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_title_textview" />

    <EditText
        android:id="@+id/singup_edittext_username"
        android:layout_width="@dimen/edittext_width"
        android:layout_height="@dimen/edittext_height"
        android:layout_marginBottom="30dp"
        android:hint="@string/signup_placeholder_username"
        android:inputType="text"
        android:maxLines="1"
        android:textSize="@dimen/normal_text"
        app:layout_constraintBottom_toTopOf="@+id/signup_edittext_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/signup_edittext_password"
        android:layout_width="@dimen/edittext_width"
        android:layout_height="@dimen/edittext_height"
        android:layout_marginBottom="50dp"
        android:hint="@string/signup_placeholder_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:textSize="@dimen/normal_text"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="@dimen/call_to_action_width"
        android:layout_height="@dimen/call_to_action_height"
        android:layout_marginBottom="@dimen/button_in_up_margin"
        android:background="@drawable/button_background"
        android:fontFamily="sans-serif"
        android:stateListAnimator="@null"
        android:text="@string/register"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
