<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.skrij.gravytruck.ThanksActivity">

    <TextView
        android:id="@+id/thanks_title_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/thanks_title"
        android:textColor="@android:color/black"
        android:textSize="@dimen/title_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/thanks_text_textview"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/thanks_text"
        android:textColor="@android:color/black"
        android:textSize="@dimen/normal_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thanks_title_textview" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="70dp"
        android:contentDescription="@string/tacos_truck_with_city"
        android:src="@drawable/tacos_illustration"
        app:layout_constraintBottom_toTopOf="@+id/thanks_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thanks_text_textview" />

    <Button
        android:id="@+id/thanks_button"
        android:layout_width="@dimen/call_to_action_width"
        android:layout_height="@dimen/call_to_action_height"
        android:layout_marginBottom="@dimen/button_in_up_margin"
        android:background="@drawable/button_background"
        android:fontFamily="sans-serif"
        android:stateListAnimator="@null"
        android:text="@string/thanks_button"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
