<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.skrij.gravytruck.StartActivity">

    <TextView
        android:id="@+id/app_title_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_name_margin"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@android:color/black"
        android:textSize="@dimen/title_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/foodtruck_image_home"
        android:src="@drawable/home"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_title_textview" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="@dimen/call_to_action_width"
        android:layout_height="@dimen/call_to_action_height"
        android:layout_marginBottom="@dimen/button_in_up_margin"
        android:background="@drawable/button_background"
        android:fontFamily="sans-serif"
        android:stateListAnimator="@null"
        android:text="@string/register"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@+id/sign_in_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="@dimen/call_to_action_width"
        android:layout_height="@dimen/call_to_action_height"
        android:layout_marginBottom="@dimen/button_in_up_margin"
        android:background="@drawable/button_background"
        android:fontFamily="sans-serif"
        android:stateListAnimator="@null"
        android:text="@string/connection"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
