<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/basic_margin"
    android:layout_marginTop="@dimen/basic_margin"
    tools:context="com.example.skrij.gravytruck.fragments.ParentFragment">

    <Button
        android:id="@+id/information_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/button_margin"
        android:text="@string/infos_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/menu_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_button"
        app:layout_constraintLeft_toRightOf="@+id/information_button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/recommendation_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recommendation_button"
        app:layout_constraintLeft_toRightOf="@+id/menu_button"
        app:layout_constraintTop_toTopOf="parent" />


    <FrameLayout
        android:id="@+id/child_fragment_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/information_button">
    </FrameLayout>

</android.support.constraint.ConstraintLayout>
