<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.skrij.gravytruck.ProfileActivity">

    <TextView
        android:id="@+id/username_profile_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/profile_margin"
        android:layout_marginTop="@dimen/profile_margin_top"
        android:text="@string/user_name"
        android:textColor="#000000"
        android:textSize="@dimen/title_text"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/link_to_modify_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/profile_margin"
        android:layout_marginTop="@dimen/basic_margin"
        android:fontFamily="sans-serif"
        android:text="@string/modify_profile"
        android:textColor="#000000"
        android:textSize="@dimen/little_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_profile_textview" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/profile_recycler_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/basic_margin"
        android:layout_marginTop="40dp"
        android:overScrollMode="never"
        android:scrollbars="none"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/blue_illustration"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/link_to_modify_profile" />

    <ImageView
        android:id="@+id/blue_illustration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/background_profile"
        android:src="@drawable/blue_illustration"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
